# santander_notification

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_notification.yml
src/santander_notification/: cycle_notification.py  email_sender.py  list_stations.py  tfl_cycle_data.py
